# gtfs-fetcher

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: tests.yml
feeds/: AlbanyNy.pkl  Berlin.pkl
gtfs/: __main__.py  feed_source.py
gtfs/feed_sources/: AlbanyNy.py  Berlin.py  Boston.py  CTTransit.py  California.py  Delaware.py  Massdot.py  Mta.py  NJTransit.py  Paac.py  Patco.py  Path.py  Pocono.py  SantaRosa.py  Septa.py  __init__.py
gtfs/utils/: FeedSource.py  check_params.py  check_status.py  constants.py  extend_effective_dates.py  geom.py  multithreading.py  set_dict_attrs.py
tests/: test_cli.py
tests/test_utils/: test_geom.py
