[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "gtfs-fetcher"
version = "0.1.0"
description = "Download, validate, and manage GTFS transit feeds"
authors = ["Ananya Nayak <ananyanayak102@gmail.com>", "Nils Nolde <nils@gis-ops.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.22.0"
typer = { version = "^0.9.0", extras = ["all"] }
prettytable = "^3.7.0"
halo = "^0.0.29"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.setuptools_scm]
write_to = "gtfs/__version__.py"
write_to_template = """
__version__ = "{version}"
"""
version_scheme = "post-release"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 105
src_paths = ["gtfs"]
skip = [
    ".venv"
]

[tool.mypy]
strict_optional = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
exclude = [
    '\.git',
    '__pycache__',
    'venv/',
]