[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gtfs-fetcher"
version = "0.1.0"
description = "Download, validate, and manage GTFS transit feeds"
authors = ["Ananya Nayak <ananyanayak102@gmail.com>", "Nils Nolde <nils@gis-ops.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.22.0"
typer = { version = "^0.9.0", extras = ["all"] }
prettytable = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[tool.setuptools_scm]
write_to = "gtfs/__version__.py"
write_to_template = """
__version__ = "{version}"
"""
version_scheme = "post-release"

[tool.black]
line-length = 105
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 105
src_paths = ["gtfs"]
skip = [
    ".venv"
]

[tool.mypy]
ignore_missing_imports = true # allow imports of non-typed libraries
strict_optional = true # no implicit Optional[Any] for None
warn_return_any = true # if return type is any for a function
warn_redundant_casts = true # if a cast to a type is unnecessary
check_untyped_defs = true # warn if a function was not annotated with types
disallow_any_generics = true # warn if generics are used
no_implicit_optional = true # warn on non-optional usage of variables initialized as None
warn_unused_configs = true # warn on unused imports
show_error_codes = true # show error codes in error messages
show_column_numbers = true # show column numbers in error messages
exclude = [
    '\.git',
    '__pycache__',
    'venv/',
]
